# spike-eval

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
docs/design/: 2026-07-18-spike-eval-agent-design.md
examples/gptq-bias-correction/: idea_spec.yaml  idea_spec_headless.yaml
examples/mbs-actweighted-search/: idea_spec.yaml
runs/: .gitignore
runs/gptq-bias-correction-gptq-20260718-162119/: README.md  idea_spec.public.yaml  idea_spec.yaml  plan.json
runs/gptq-bias-correction-gptq-20260718-162119/impl/: idea.patch
runs/gptq-bias-correction-gptq-20260718-162119/ladder/: facebook-opt-125m_a0.0.json  facebook-opt-125m_a1.0.json  facebook-opt-125m_pristine.json
runs/gptq-bias-correction-gptq-20260718-170508/: README_zh.md  analysis_en.md  analysis_zh.md  grade.json  idea.md  idea_spec.public.yaml  idea_spec.yaml  ingest.json  plan.json
runs/gptq-bias-correction-gptq-20260719-030618/: README.md  README_zh.md  analysis_en.md  analysis_zh.md  grade.json  idea_spec.public.yaml  idea_spec.seed.yaml  idea_spec.yaml  plan.json
runs/mbs-actw-qwen3-8b-20260719-121827/: README.md  analysis_en.md  analysis_zh.md  results.json
scripts/: run_gptq_demo.py
src/spike_eval/: __init__.py  ablate.py  baseline.py  cli.py  correctness.py  gpu.py  grade.py  headless.py  ideaspec.py  implement.py  ingest.py  modelpaths.py  models.py  pipeline.py  planstage.py  report.py  rundir.py  validate.py
src/spike_eval/executors/: __init__.py  (+1 more)
tests/: test_gptq_opt.py  test_gpu.py  test_grade.py  test_ingest_plan.py  test_models.py  test_pipeline.py  test_validate.py
(+19 files in other folders)
