[project]
name = "spike-eval"
version = "0.1.0"
description = "Spike a new-algorithm idea into a research repo and validate it against the repo's own baseline, fast"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
]

[project.scripts]
spike-eval = "spike_eval.cli:cli"
spike = "spike_eval.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spike_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
